--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,12 @@
   <script src="lib/react/react-with-addons.js"></script>
   <script src="lib/react/JSXTransformer.js"></script>
   <script src="lib/jquery/dist/jquery.js"></script>
+  <script src="lib/eventEmitter/EventEmitter.js"></script>
   <script type="text/jsx" src="src/app.jsx"></script>
+  <script type="text/jsx" src="src/components/chat/ChatBox.jsx"></script>
+  <script type="text/jsx" src="src/components/chat/ChatMessage.jsx"></script>
+  <script type="text/jsx" src="src/components/chat/MessageInput.jsx"></script>
+  <script type="text/jsx" src="src/components/chat/MessagesList.jsx"></script>
+  <script type="text/jsx" src="src/components/chat/SystemMessage.jsx"></script>
 </body>
 </html>
