--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,22 @@
 </head>
 <body>
   <section id="container">
-    <label for="room-name">Room name</label>
+    <label for="room-name-input">Room name</label>
     <input type="text" id="room-name-input" class="form-control">
+    <label for="username-input">Username</label>
+    <input type="text" id="username-input" class="form-control">
     <br>
     <button id="connect-btn" class="btn btn-primary">Connect</button>
   </section>
+  <script src="/socket.io/socket.io.js"></script>
   <script src="lib/react/react-with-addons.js"></script>
   <script src="lib/react/JSXTransformer.js"></script>
   <script src="lib/jquery/dist/jquery.js"></script>
+  <script src="lib/peerjs/peer.js"></script>
   <script src="lib/eventEmitter/EventEmitter.js"></script>
   <script type="text/jsx" src="src/app.jsx"></script>
+  <script type="text/jsx" src="src/Topics.js"></script>
+  <script type="text/jsx" src="src/models/ChatProxy.js"></script>
   <script type="text/jsx" src="src/components/chat/ChatBox.jsx"></script>
   <script type="text/jsx" src="src/components/chat/ChatMessage.jsx"></script>
   <script type="text/jsx" src="src/components/chat/MessageInput.jsx"></script>
