--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
   <script type="text/jsx" src="src/Topics.js"></script>
   <script type="text/jsx" src="src/models/ChatProxy.js"></script>
   <script type="text/jsx" src="src/components/chat/ChatBox.jsx"></script>
+  <script type="text/jsx" src="src/components/chat/UsersList.jsx"></script>
   <script type="text/jsx" src="src/components/chat/ChatMessage.jsx"></script>
   <script type="text/jsx" src="src/components/chat/MessageInput.jsx"></script>
   <script type="text/jsx" src="src/components/chat/MessagesList.jsx"></script>
