--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
   <section id="container">
-    <label for="username-input">Username</label>
-    <input type="text" id="username-input" class="form-control">
-    <br>
-    <button id="connect-btn" class="btn btn-primary">Connect</button>
+    <div class="reg-form-container">
+      <label for="username-input">Username</label>
+      <input type="text" id="username-input" class="form-control">
+      <br>
+      <button id="connect-btn" class="btn btn-primary">Connect</button>
+    </div>
   </section>
   <script src="/socket.io/socket.io.js"></script>
   <script src="lib/react/react-with-addons.js"></script>
